fixed issue with textarea overflow on windows

--- a/client/sidebar/sidebar.scss
+++ b/client/sidebar/sidebar.scss
@@ -69,7 +69,7 @@
         outline: none;
         line-height: 40px;
         padding-left: 5px;
-        vertical-align: middle;
+        overflow: hidden;
       }
     }
   }
